<resources>
    <string name="app_name">یاراتیوب</string>
    <string name="profile">پروفایل</string>
    <string name="about">درباره ما</string>
    <string name="contact">ارتباط با ما</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">نام کاربر</string>
    <string name="category">دسته بندی ها</string>
    <string name="register">صفحه اصلی</string>
    <string name="category_fragment">اینجا فرگمنت دسته بندی است.</string>

    <string name="name_string">نام</string>
    <string name="family_string">نام خانوادگی</string>
    <string name="email_string">ایمیل</string>
    <string name="login_string">ورود</string>
    <string name="cancel_string">انصراف</string>
    <string name="about_text">نرگس صادقی \n کارآموز برنامه نویسی اندروید شرکت یارا \n تابستان سال 1397</string>
    <string name="show_form_activity">فرم</string>

    <string name="developer_email">mailto:nargessadeghi@ut.ac.ir?subject=Contact%20to%20Yaratube%20developer"</string>
    <string name="developer_github">https://github.com/NaarGes</string>
    <string name="developer_linkedin">https://www.linkedin.com//in/nargessadeghi</string>
    <string name="developer_telegram">https://t.me/NnargessS</string>

    <string name="yara_logo">Yara Logo</string>
    <string name="contact_developer">ارتباط با توسعه دهنده</string>
    <string name="about_developer">درباره توسعه دهنده</string>
    <string name="submit_string">ثبت</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
