<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|top"
            android:layout_margin="@dimen/app_border"
            android:paddingBottom="100dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/yara_logo"
                android:layout_width="@dimen/logo_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/defaultMargin"
                android:layout_marginLeft="@dimen/defaultMargin"
                android:layout_marginRight="@dimen/defaultMargin"
                android:layout_marginStart="@dimen/defaultMargin"
                android:layout_marginTop="@dimen/logo_margin"
                android:layout_marginBottom="@dimen/logo_margin"
                android:contentDescription="@string/yara_logo"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginEnd="@dimen/defaultMargin"
                android:layout_marginLeft="@dimen/defaultMargin"
                android:layout_marginRight="@dimen/defaultMargin"
                android:layout_marginStart="@dimen/defaultMargin"
                android:layout_marginTop="@dimen/defaultMargin"
                android:hint="@string/name_string" />

            <EditText
                android:id="@+id/family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginEnd="@dimen/defaultMargin"
                android:layout_marginLeft="@dimen/defaultMargin"
                android:layout_marginRight="@dimen/defaultMargin"
                android:layout_marginStart="@dimen/defaultMargin"
                android:layout_marginTop="@dimen/defaultMargin"
                android:hint="@string/family_string" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginEnd="@dimen/defaultMargin"
                android:layout_marginLeft="@dimen/defaultMargin"
                android:layout_marginRight="@dimen/defaultMargin"
                android:layout_marginStart="@dimen/defaultMargin"
                android:layout_marginTop="@dimen/defaultMargin"
                android:hint="@string/email_string" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/defaultMargin"
                    android:layout_marginTop="@dimen/defaultMargin"
                    android:text="@string/login_string" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/defaultMargin"
                    android:layout_marginTop="@dimen/defaultMargin"
                    android:text="@string/cancel_string" />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/form_button"
                android:layout_marginTop="@dimen/app_border"
                android:text="@string/show_form_activity"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>